--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -36,9 +36,36 @@
         </script>
     </head>
     <body class="fixed-header ">
-        {% block body %}
+    {% block body %}
+        <!-- BEGIN SIDEBPANEL-->
+        {% include 'sidebar.html.twig' %}
+        <!-- END SIDEBAR -->
+        <!-- START PAGE-CONTAINER -->
+        <div class="page-container ">
 
-        {% endblock %}
+            <!-- START HEADER -->
+            {% include 'header.html.twig' %}
+            <!-- END HEADER -->
+
+            <!-- START PAGE CONTENT WRAPPER -->
+            <div class="page-content-wrapper " id="content-div">
+                <!-- START PAGE CONTENT -->
+{#                <div class="content  {% if calendar is defined %} full-heigth {% endif %}"   >
+                    <!-- START JUMBOTRON -->
+                    {% block CONTENT %}     {% endblock %}
+                </div>#}
+                <!-- END PAGE CONTENT -->
+                <!-- START COPYRIGHT -->
+                <!-- START CONTAINER FLUID -->
+                <!-- START CONTAINER FLUID -->
+                {% include 'footer.html.twig' %}
+                <!-- END COPYRIGHT -->
+            </div>
+            <!-- END PAGE CONTENT WRAPPER -->
+        </div>
+        <!-- END PAGE CONTAINER -->
+
+    {% endblock %}
     <!-- BEGIN VENDOR JS -->
     {% block default_javascripts %}
     <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
