--- a/src/AppBundle/Resources/views/employe/tem.html.twig
+++ b/src/AppBundle/Resources/views/employe/tem.html.twig
@@ -8,10 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    {% for emp in employee %}
-        nom : {{ emp.nom }}
-        <br>
-        prenom : {{ emp.prenom }}
-    {% endfor %}
+symfony {{ employee.nom }}
 </body>
 </html>
