--- a/app/Resources/views/adefault/base.html.twig
+++ b/app/Resources/views/adefault/base.html.twig
@@ -75,6 +75,9 @@
     {{ parent() }}
 
     {% if calendar is defined %}
+        <script>
+            console.log('hani ana f if');
+        </script>
         <script src="{{ asset('assets/plugins/interactjs/interact.min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('assets/plugins/moment/moment-with-locales.min.js') }}" type="text/javascript"></script>
         <script src="{{ asset('pages/js/pages.min.js') }}" type="text/javascript"></script>
@@ -83,6 +86,9 @@
         <script src="{{ asset('assets/js/calendar_lang.js') }}" type="text/javascript"></script>
         {#<script src="{{ asset('assets/js/scripts.js') }}" type="text/javascript"></script>#}
     {% else %}
+        <script>
+            console.log('hani ana f else');
+        </script>
         <script src="{{ asset('js/myDatatable.js') }}" type="text/javascript"></script>
         <script src="{{ asset('pages/js/pages.min.js') }}" type="text/javascript"></script>
         {#<script src="{{ asset('assets/js/scripts.js') }}" type="text/javascript"></script>#}
